feat : c++ <-> c# 연동 테스트

--- a/platform/WpfApp1/MainWindow.xaml
+++ b/platform/WpfApp1/MainWindow.xaml
@@ -10,7 +10,8 @@
         KeyDown="Window_KeyDown"
         KeyUp="Window_KeyUp"
         Background="{StaticResource Background}"
-        Focusable="True">
+        Focusable="True"
+        >
 
     <Grid Margin="10">
 
