--- a/platform/wpf/App.xaml
+++ b/platform/wpf/App.xaml
@@ -2,12 +2,12 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:wpf"
-             StartupUri="MainWindow.xaml"
-             ShutdownMode="OnMainWindowClose">
+             StartupUri="StartWindow.xaml"
+             ShutdownMode="OnLastWindowClose">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/render/theme/SolarizedDarkTheme.xaml"/>
+                <ResourceDictionary Source="/render/theme/DraculaTheme.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
