--- a/platform/wpf/MainWindow.xaml
+++ b/platform/wpf/MainWindow.xaml
@@ -4,13 +4,14 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="MainWindow"
+        Title="SINGLE GAME"
         Width="800"
         Height="800"
         KeyDown="Window_KeyDown"
-        Background="{StaticResource Background}"
+        Background="{DynamicResource Background}"
         Focusable="True"
         ResizeMode="NoResize"
+        WindowStartupLocation="CenterScreen"
         >
 
     <Grid Margin="10">
@@ -38,13 +39,12 @@
         </Border>
 
         <!-- 메인 게임판 -->
-        <Border Grid.Row="1" Grid.Column="1"
-                >
+        <Border Grid.Row="1" Grid.Column="1">
             <!-- 게임판 사이즈 고정 -->
             <Border
                 Margin="5"
                 Width="277" Height="550"
-                BorderBrush="{StaticResource Comment}"
+                BorderBrush="{DynamicResource Comment}"
                 BorderThickness="2">        
                 <Canvas x:Name="CanvasBoard"/>
             </Border>
@@ -82,7 +82,7 @@
             <!-- Score -->
             <Border Grid.Row="1"
                     CornerRadius="12"
-                    BorderBrush="{StaticResource Panel}"
+                    BorderBrush="{DynamicResource Panel}"
                     BorderThickness="2"
                     Margin="5">
                 <Canvas x:Name="CanvasScore"/>
@@ -91,7 +91,7 @@
             <!-- Lv -->
             <Border Grid.Row="2"
                     CornerRadius="12"
-                    BorderBrush="{StaticResource Panel}"
+                    BorderBrush="{DynamicResource Panel}"
                     BorderThickness="2"
                     Margin="5">
                 <Canvas x:Name="CanvasLevel"/>
@@ -102,7 +102,7 @@
         <!-- 우측 타이머 -->
         <Border Grid.Row="0"
                 Grid.Column="2"
-                BorderBrush="{StaticResource Comment}"
+                BorderBrush="{DynamicResource Comment}"
                 BorderThickness="2"
                 Margin="5">
             <Canvas x:Name="CanvasTimer"/>
@@ -125,7 +125,7 @@
 
             <Border Grid.Row="1"
                     CornerRadius="10"
-                    BorderBrush="{StaticResource Cyan}"
+                    BorderBrush="{DynamicResource Cyan}"
                     BorderThickness="2"
                     Margin="5">
                 <Canvas x:Name="CanvasNext1"/>
@@ -133,7 +133,7 @@
 
             <Border Grid.Row="2"
                     CornerRadius="10"
-                    BorderBrush="{StaticResource Cyan}"
+                    BorderBrush="{DynamicResource Cyan}"
                     BorderThickness="2"
                     Margin="5">
                 <Canvas x:Name="CanvasNext2"/>
@@ -141,7 +141,7 @@
 
             <Border Grid.Row="3"
                     CornerRadius="10"
-                    BorderBrush="{StaticResource Cyan}"
+                    BorderBrush="{DynamicResource Cyan}"
                     BorderThickness="2"
                     Margin="5">
                 <Canvas x:Name="CanvasNext3"/>
