[Feat]start, end UI 구현

--- a/platform/wpf/MainWindow.xaml
+++ b/platform/wpf/MainWindow.xaml
@@ -13,7 +13,57 @@
         ResizeMode="NoResize"
         WindowStartupLocation="CenterScreen"
         >
+    <Window.Resources>
 
+        <!-- 게임 버튼 스타일 -->
+        <Style x:Key="GameButtonStyle" TargetType="Button">
+            <Setter Property="Width" Value="150"/>
+            <Setter Property="Height" Value="80"/>
+            <Setter Property="FontSize" Value="32"/>
+            <Setter Property="FontWeight" Value="SemiBold"/>
+            <Setter Property="Foreground" Value="{DynamicResource Background}"/>
+            <Setter Property="Background" Value="{DynamicResource Foreground}"/>
+            <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="Cursor" Value="Hand"/>
+            <Setter Property="Margin" Value="0,20,0,0"/>
+
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border x:Name="border"
+                         Background="{TemplateBinding Background}"
+                         CornerRadius="30">
+                            <ContentPresenter
+                         HorizontalAlignment="Center"
+                         VerticalAlignment="Center"/>
+                        </Border>
+
+                        <!-- 마우스 효과 -->
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter TargetName="border"
+                                 Property="Background"
+                                 Value="{DynamicResource Comment}"/>
+                            </Trigger>
+                            <Trigger Property="IsPressed" Value="True">
+                                <Setter TargetName="border"
+                                 Property="Background"
+                                 Value="{DynamicResource Orange}"/>
+                            </Trigger>
+                            <Trigger Property="IsEnabled" Value="False">
+                                <Setter TargetName="border"
+                                 Property="Opacity"
+                                 Value="0.5"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
+    </Window.Resources>
+    
     <Grid Margin="10">
 
         <!-- 열 2개 -->
@@ -147,5 +197,31 @@
                 <Canvas x:Name="CanvasNext3"/>
             </Border>
         </Grid>
+
+        <!-- 오버레이 -->
+        <Border x:Name="Overlay"
+                Grid.Row="0"
+                Grid.Column="0"
+                Grid.RowSpan="2"
+                Grid.ColumnSpan="3"
+                Background="#AA000000"
+                Visibility="Collapsed"
+                Panel.ZIndex="100">
+
+            <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <Canvas x:Name="CanvasOverlayTitle"/>
+                    <Canvas x:Name="CanvasOverlayContent"/>
+                    <!-- 오버레이 -->
+                <Border x:Name="Overlay2"
+                    Background="#AA000000"
+                    Visibility="Collapsed"
+                    Panel.ZIndex="200">
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,100,0,0" >
+                        <Button Content="메인" Style="{StaticResource GameButtonStyle}" Click="GoHome_Click" Margin="25 0 25 0"/>
+                        <Button Content="종료" Style="{StaticResource GameButtonStyle}" Click="Exit_Click"  Margin="25 0 25 0"/>
+                    </StackPanel>
+                </Border>
+            </StackPanel>
+        </Border>
     </Grid>
 </Window>
